fixed the main login/register page and added js functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
 
 server.servlet.context-path=/paypalclone
+
+management.endpoints.web.exposure.include=*
