added postgres integration, registration, and login functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,28 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show-sql=true
+server.servlet.context-path=/paypalclone
 
+management.endpoints.web.exposure.include=*
+
+#logging.level.org.springframework.web: DEBUG
+#logging.level.org.hibernate: DEBUG
+#logging.level.org.springframework.core.io.support=DEBUG
+#logging.level.org.springframework.context.annotation=DEBUG
+
+#spring data jpa properties
+spring.jpa.database = POSTGRESQL
+spring.jpa.show-sql = false
+
+# Hibernate properties
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+#datasource properties
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=451046
-
-
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
-
-
-server.servlet.context-path=/paypalclone
-
-management.endpoints.web.exposure.include=*
